--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -17,8 +17,8 @@
         <hr>
         <p class="card-text">{{post.excerpt|truncatechars:100}}</p>
         <hr>
-        <p class="card-text text-muted h6">{{post.created_on}} <i class="far fa-heart"></i>
-          {{ post.number_of_likes }}</p>
+        <p class="card-text text-muted h6">{{post.created_on}} <i class="far fa-heart"></i> {{post.number_of_likes}}</p>
+        <p class="card-text text-muted h6"><i class="far fa-comments"></i> {{post.comments.count}}</p>
       </div>
     </div>
   </a>
