--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -20,52 +20,62 @@
                 <p class="p-3">{{post.excerpt}}</p>  
             </div>
         </div>
-        <div class="post-container">
-            <div class="content p-3">
+        <div class="post-container m-4">
+            <div class="content p-5">
                 <p>{{post.content|safe}}</p>
-                <hr>
             </div>
         </div>
-        <div>
-            {% if user.is_authenticated %}
-            <form action="{% url 'post_like' post.id %}" method="POST">
-                {% csrf_token %}
-                {% if post_is_liked %}
-                <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                    <i class="fas fa-heart"></i>
-                </button>
+        <hr style="width:100%;">
+        <div class="row">
+            <div class="col-1">
+                {% if user.is_authenticated %}
+                <form action="{% url 'post_like' post.id %}" method="POST">
+                    {% csrf_token %}
+                    {% if post_is_liked %}
+                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
+                        <i class="fas fa-heart"></i>
+                    </button>
+                    {% else %}
+                    <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
+                        <i class="far fa-heart"></i>
+                    </button>
+                    {% endif %}
+                    <span class="text-secondary">{{ post.number_of_likes }}</span>
+                </form>
                 {% else %}
-                <button type="submit" name="post_id" value="{{post.id}}" class="btn-like">
-                    <i class="far fa-heart"></i>
-                </button>
-                {% endif %}
-                <span class="text-secondary">{{ post.number_of_likes }}</span>
-            </form>
-            {% else %}
-            <span class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }}</span>
-            {% endif %}
-        </div>
+                <span class="text-secondary"><i class="far fa-heart"></i> {{ post.number_of_likes }}</span> 
+                {% endif %} 
+            </div>  
+            <div class="col-1">
+                <span class="text-secondary"><i class="far fa-comments"></i> {{post.comments.count }}</span>  
+            </div>
+        </div> 
+   
         <br>
         <div>
             <h1>Comments:</h1>
             {% if user.is_authenticated %}
-            <a class="btn btn-primary btn-sm mb-4" href="{% url 'add_comment' pk=post.pk %}">Add comment</a>
+            <a class="btn btn-primary btn-sm mb-4" href="{% url 'add_comment' pk=post.pk %}" role="button">Add comment</a>
             {% else %}
            <a class="text-decoration-none" href="/accounts/login/"><p>Sign in to leave a comment</p></a>
             {% endif %}
             {% for comment in post.comments.all %}
-                <!-- Display commenter's name and comment's created date -->
+            <!-- Display commenter's name and comment's created date -->
+            <div class="card-comment">
                 <p>
                     <strong>{{ comment.name }}</strong> -
-                        <span class="text-muted">
-                            {{ comment.created_on }}
-                        </span><br>
-                        <!-- Display the body of the comment -->
-                    {{ comment.body }}
+                    <span class="text-muted">
+                        {{ comment.created_on }}
+                    </span>
+                    <br>
+                    <!-- Display the body of the comment -->
+                    {{ comment.body|safe }}
                 </p>
-                
-            {% endfor %}  
-        </div>    
+            </div>
+            {% empty %}
+            <p>No comments here yet!</p>  
+        </div>  
+        {% endfor %}   
     </div>
    
 {% endblock content %}
